NIFI-12639 Ported all the changes from NIFI-11627 for the support/nifi-1.x branch.